--- a/WindowsTerminalTray.csproj
+++ b/WindowsTerminalTray.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{CBC9BB16-8421-4641-9850-B950D82F4022}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>WindowsTermialTray</RootNamespace>
-    <AssemblyName>WindowsTermialTray</AssemblyName>
+    <RootNamespace>WindowsTerminalTray</RootNamespace>
+    <AssemblyName>WindowsTerminalTray</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
